# sender_receiver

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  test.c
lib/sem182/: COPYING  Makefile  README  msem182.3  msem182.c  msem182.h  sem182.3  sem182.c  sem182.h
src/: receiver.c  sender.c  shared.c  shared.h
